themes/audigame/panel.css
/**
 * Types
 */
::content dude-sidebar .search-result core-icon.type-stream, ::content cg-dropdown .row.type-stream { color: rgba(220, 220, 220, 1);}
::content dude-sidebar .search-result core-icon.type-sound, ::content cg-dropdown .row.type-sound { color: rgba(241, 196, 15, 1);}
::content dude-sidebar .search-result core-icon.type-string, ::content cg-dropdown .row.type-string { color: rgba(230, 126, 34, 1);}
::content dude-sidebar .search-result core-icon.type-boolean, ::content cg-dropdown .row.type-boolean { color: rgb(46, 204, 113);}
::content dude-sidebar .search-result core-icon.type-number, ::content cg-dropdown .row.type-number { color: rgb(33, 150, 243);}

/**
 * Base
 */
::content dude-toolbar [data-state="root"] {
    margin: auto;
    padding: 0 20px;
    max-width: 900px;
}
::content dude-sidebar {
    padding: 10px;
    transition: .2s;
    width: 250px;
}
::content dude-sidebar.left:not(.selected),
::content dude-sidebar.right:not(.selected) {
    width: 0;
    padding: 0;
    border-left: none;
    border-right: none;
}
::content dude-sidebar .box {
    box-sizing: border-box;
    padding: 20px;
    margin: 15px 0;
    text-align: center;
}
::content dude-sidebar .search-list {
    overflow: auto;
    max-height: 100%;
}
::content dude-sidebar .search-result, ::content dude-sidebar .search-not-found {
    color: #aaa;
    padding: 10px;
}
::content dude-sidebar .search-result {
    cursor: pointer;
}
::content dude-sidebar .search-result:hover {
    color: #eee;
}
::content dude-sidebar .search-result.core-selected {
    color: #eee;
    padding: 10px;
}
::content dude-sidebar .search-result:not(:last-child) {
    border-bottom: 1px solid #444;
}
::content dude-sidebar .search-result core-icon {
    margin-right: 10px;
}
::content dude-sidebar cg-dropdown /deep/ #header {
    text-transform: uppercase;
    border-bottom: 1px solid #444;
    cursor: pointer;
    padding: 10px;
}
::content dude-sidebar cg-dropdown .row {
    opacity: 0.6;
    cursor: pointer;
    padding: 10px 0;
}
::content dude-sidebar cg-dropdown .row:hover {
    opacity: 1;
}
::content dude-sidebar cg-dropdown .row.core-selected {
    display: none;
}
::content dude-sidebar .box input[is="core-input"] {
    width: 100%;
}

:host {
    background: #333;
}

/* Toolbar */
::content dude-toolbar {
    padding: 5px;
    font-family: "Lato", sans-serif;
    font-weight: 300;
    color: rgb(243, 156, 18);
    background: #222;
    height: 40px;
}
::content dude-toolbar.top { border-bottom: 1px solid rgb(243, 156, 18); }
::content dude-toolbar.bottom { border-top: 1px solid rgb(243, 156, 18); }

/* Toolbar input */
::content dude-toolbar-input /deep/ input[is="core-input"] {
    font-family: "Lato", sans-serif;
    font-weight: 300;
    color: #ccc;
    padding: 5px;
}

/* Toolbar command */
::content dude-toolbar /deep/ paper-icon-button[disabled] {
    color: rgba(243, 156, 18, 0.5);
}


/* Sidebar */
::content dude-sidebar {
    font-family: "Lato", sans-serif;
    font-weight: 300;
    color: #ddd;
    background: #222;
}
::content dude-sidebar.left { border-right: 1px solid rgb(243, 156, 18); }
::content dude-sidebar.right { border-left: 1px solid rgb(243, 156, 18); }
::content dude-sidebar .title {
    text-transform: uppercase;
    text-align: center;
    cursor: pointer;
    margin-bottom: 10px;
}
::content dude-sidebar .subtitle {
    font-style: italic;
    color: #aaa;
    margin-top: 10px;
}
::content dude-sidebar .box {
    background: rgba(0, 0, 0, .2);
    border-radius: 3px;
}
::content dude-sidebar .box input[is="core-input"] {
    color: #ccc;
}
::content dude-sidebar .box audio {
    width: 100%;
}
::content dude-sidebar .box cg-file-button /deep/ paper-button {
    text-transform: none;
}

